fixed joinus resized spacing

--- a/src/App.css
+++ b/src/App.css
@@ -203,7 +203,7 @@ p.graspDesc {
 }
 
 p.height-130 {
-  height: 130px;
+  height: 180px;
 }
 
 p.graspBold{
